tests/transpiler/x/java/basic_compare.java
// Generated by Mochi transpiler v0.10.31 on 2025-07-19 18:28:06 UTC
public class Main {
    public static void main(String[] args) {
        var a = 10 - 3;
        var b = 2 + 2;
        System.out.println((a == null ? "nil" : a));
        System.out.println((a == 7 ? 1 : 0));
        System.out.println((b < 5 ? 1 : 0));
    }
}
